Crash on Group Rename #44212

Closed
opened 2015-03-31 23:56:58 +02:00 by Dennis Brown · 8 comments

System Information
Windows 7 SP1
ATI 7950/nVidia 650 GTX

Blender Version
Broken: 2.74 #000dfc0
Worked: 2.74 rc1 (downloaded on 3/29 2pm CST. My apologies for not having the exact hash)

Short description of error
When choosing "rename" on group, Blender closes with an EXCEPTION_ACCESS_VIOLATION error.

Exact steps for others to reproduce the error

  1. Select 2 objects from the viewfinder, and use the Ctrl+G shortcut in the viewfinder.
  2. Switch to "Groups" in the Outliner
  3. Right click the new group in outliner, and choose "Rename"

Using the attached .blend file, group_crash, you can simply start at step 3. With the .blend file pre_group_crash, start the entire process of selecting the cube and plane. Also attached is the log file from Blender after the crash.

I created, and removed many groups yesterday with the release candidate, without any visible issues.

group_crash.blend

pre_group_crash.blend

blender.crash.txt

**System Information** Windows 7 SP1 ATI 7950/nVidia 650 GTX **Blender Version** Broken: 2.74 #000dfc0 Worked: 2.74 rc1 (downloaded on 3/29 2pm CST. My apologies for not having the exact hash) **Short description of error** When choosing "rename" on group, Blender closes with an EXCEPTION_ACCESS_VIOLATION error. **Exact steps for others to reproduce the error** 1. Select 2 objects from the viewfinder, and use the Ctrl+G shortcut in the viewfinder. 2. Switch to "Groups" in the Outliner 3. Right click the new group in outliner, and choose "Rename" Using the attached .blend file, group_crash, you can simply start at step 3. With the .blend file pre_group_crash, start the entire process of selecting the cube and plane. Also attached is the log file from Blender after the crash. I created, and removed many groups yesterday with the release candidate, without any visible issues. [group_crash.blend](https://archive.blender.org/developer/F156926/group_crash.blend) [pre_group_crash.blend](https://archive.blender.org/developer/F156927/pre_group_crash.blend) [blender.crash.txt](https://archive.blender.org/developer/F156928/blender.crash.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DBrown

Added subscriber: @DBrown
Author

64-bit OS, and x64 on both versions of Blender. Apologies.

64-bit OS, and x64 on both versions of Blender. Apologies.

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm that.

Can confirm that.
Bastien Montagne self-assigned this 2015-04-01 09:39:53 +02:00

This issue was referenced by 71af08e1c9

This issue was referenced by 71af08e1c972024244e48096a3f44da25de2eb95

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 71af08e1c9.

Closed by commit 71af08e1c9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44212
No description provided.