Fix T44212: Crash on Group Rename.

Nice offset-by-one index error. ;)